# ej-application

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  et --hard HEAD^  pyproject.toml  run_celery.sh
docker/: Dockerfile  docker-compose.yml  run_local_server.sh  run_prod_server.sh  variables.env
docs/: conf.py  index.rst
docs/development-guides/diagrams/: architecture_c4.puml
docs/development-guides/pt-br/: api.rst  architecture.rst  contributing.rst  customizing.rst  dev-integration.rst  dev-style.rst  environment-variables.rst  index.rst  smtp.rst  social-login.rst  terms-of-use.rst  themes.rst  translations.rst  urls.rst
docs/user-guides/pt-br/: analysis.rst  conversation-access.rst  creating-conversation.rst  index.rst  terms-of-use.rst  tools-chatbot.rst  tools-ejgroups.rst  tools-mail-template.rst  tools-opinion-component.rst  tools.rst  user-boards.rst  user-environment.rst  user-start.rst  voting.rst
e2e/: README.md  cypress.config.js  package-lock.json
e2e/cypress/e2e/: anonymous_participation.cy.js  creating_conversation.cy.js  customConversation.cy.js  loginAndRegister.cy.js
e2e/cypress/support/: commands.js
etc/tasklib/: base.py  build_tasks.py  db_tasks.py  django_tasks.py  docker_tasks.py  testing_tasks.py
locale/pt_BR/LC_MESSAGES/: django.po
src/ej/: all.py  decorators.py  forms.py  jinja2.py  permissions.py  routes.py  urls.py  views.py
src/ej/components/: __init__.py  layout.py  menu.py
src/ej/fixes/: startup_accelerator.py
src/ej/roles/: page_head.py  routes.py  tags.py
src/ej/services/: postgres.py
src/ej/settings/: __init__.py  apps.py  constance.py  email.py  middleware.py  paths.py  security.py
src/ej/testing/: fixture_class.py  url_tester.py
src/ej/tests/: __init__.py  test_constance.py  test_routes.py  test_urls.py  test_views.py
src/ej_activation/: apps.py  models.py  urls.py  views.py
src/ej_activation/migrations/: 0001_initial.py  0002_alter_community_engagement_level.py  0003_alter_community_engagement_level.py  0004_auto_20230821_1153.py  0005_remove_community_members.py  0006_auto_20230829_2100.py  0007_segmentfilter.py  0008_delete_segmentvote.py  0009_delete_segment.py
src/ej_activation/tests/: conftest.py  test_models.py
src/ej_admin/: utils.py  views.py
src/ej_admin/tests/: test_views.py
src/ej_boards/: api.py  forms.py  models.py  routes.py  rules.py  serializers.py  urls.py  views.py
src/ej_boards/migrations/: 0003_create_default_board.py  0004_set_board_on_conversations.py
src/ej_boards/tests/: test_api.py  test_models.py  test_views.py
src/ej_clusters/: __init__.py  api.py  celery.py  enums.py  factories.py  forms.py  mommy_recipes.py  roles.py  rules.py  serializers.py  stereotypes_utils.py  tasks.py  utils.py
src/ej_clusters/math/: benchmark_data.py  benchmark_factories.py  data_refactored.py  factories.py  factories_refactored.py  kmeans.py  kmeans_sklearn.py  kmeansjoblib.py
src/ej_clusters/models/: __init__.py  cluster.py  cluster_queryset.py  clusterization.py  stereotype.py  stereotype_vote.py
src/ej_clusters/tests/: benchmark_kmeans.py  conftest.py  test_forms.py  test_kmeans.py  test_kmeansjoblib.py  test_models.py  test_tasks.py  test_views.py
src/ej_clusters/urls/: clusters.py  stereotype_votes.py  stereotypes.py
src/ej_clusters/views/: clusters.py  stereotype_votes.py  stereotypes.py
src/ej_conversations/: __init__.py  admin.py  api.py  decorators.py  enums.py  forms.py  math.py  mixins.py  mommy_recipes.py  public_urls.py  rules.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py  views_comments.py
src/ej_conversations/migrations/: 0006_comment_rejection_reason.py  0015_add_default_board_to_conversation.py  0017_vote_analytics_utm.py  0020_conversation_anonymous_votes_limit.py  0021_auto_20230922_1408.py  0022_alter_conversation_text.py  0023_conversation_welcome_message.py  0024_alter_conversation_welcome_message.py  0025_alter_conversationtag_tag.py  0026_alter_vote_channel.py  0027_conversation_background_image_and_more.py  (+7 more)
src/ej_dataviz/: apps.py  constants.py  models.py  roles.py  rules.py  urls.py  utils.py  views_dataviz.py  views_report.py
src/ej_profiles/: admin.py  api.py  enums.py  forms.py  models.py  mommy_recipes.py  serializer.py  urls.py  views.py
src/ej_signatures/: apps.py  models.py  rules.py  views.py
src/ej_tools/: api.py  forms.py  mailing.py  models.py  serializers.py  tools.py  urls.py  utils.py  views.py
src/ej_users/: adapters.py  admin.py  api.py  forms.py  manager.py  models.py  rest_auth_serializer.py  routes.py  serializers.py  signals.py  socialbuttons.py
(+304 files in other folders)
